# inferlite

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/commands/: archive-mainline.md  archive-milestone.md  archive-task.md  archive.md  check-prerequisites.md  next-task.md  plan-next-milestone.md  plan.md  preflight.md  research-before-plan.md  review.md  work.md
.github/workflows/: docs.yml  tests.yml
bench/results/: 2026-06-29-m2-kv-cache-mps-bf16.md  2026-07-18-m3-continuous-batching-mps-bf16.md
docs/: 4-setup.md  CONCEPTS.md  M1.md  PLAN.md  PROGRESS.md  README.md  REFERENCES.md  STRUCTURE.md  m1-naive-forward.md  setup.md
docs/1-plan/: M1.md  PLAN.md  PROGRESS.md
docs/2-tasks/: M1-T0-ModelConfig.md  M1-T0p-ModelConfig.md  M1-T1-RMSNorm.md  M1-T11-CLI-L2-e2e.md  M1-T12-pre-last-token-logits.md  M1-T12-smoke-test.md  M1-T2-SwiGLU.md  M1-T3-RoPE.md  M1-T5-DecoderLayer.md  M1-T7-WeightMap-load-from-hf.md  M1-T8-L1-logits-alignment.md  M2-T1-KVCache-DataStructure.md  M2-T2-Attention-KVCache.md  M2-T3-Model-Passthrough.md  M2-T4-Generate-Loop.md  M2-T5-CLI-Device-Dtype.md  README.md  _TEMPLATE.md
docs/3-kb/: REFERENCES.md  blueprints.md  decisions.md  knowledge.md  lessons.md
docs/kb/: REFERENCES.md  decisions.md  knowledge.md  lessons.md
docs/knowledge/: knowledge.md  m2-kv-cache-design.md  m3-continuous-batching.md  (+3 more)
scripts/: bench_attention_only.py  bench_continuous_batching.py  bench_kv_cache.py  doctor.sh  preflight.py  setup.sh
search/: search_index.json
(+110 files in other folders)
